[tool.poetry]
name = "asgi-testclient"
version = "0.1.0"
description = "Test Clietn for ASGI web applications"
authors = ["Ordanis Sanchez <ordanisanchez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-cov = "^2.6"
pytest-mypy = "^0.3.2"
flake8 = "^3.7"
black = "18.9b0"
starlette = "^0.11.3"
pytest-asyncio = "^0.10.0"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
