[tool.poetry]
name = "asgi-testclient"
version = "0.3.0"
description = "Test Clietn for ASGI web applications"
authors = ["Ordanis Sanchez <ordanisanchez@gmail.com>"]
homepage = "https://github.com/oldani/asgi-testClient"
repository = "https://github.com/oldani/asgi-testClient"
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.6",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-cov = "^2.6"
pytest-mypy = "^0.3.2"
flake8 = "^3.7"
black = "18.9b0"
starlette = "^0.11.3"
pytest-asyncio = "^0.10.0"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
